[gd_scene load_steps=3 format=3 uid="uid://daxygoynvdyya"]

[ext_resource type="Script" path="res://interface/menus/pause/pause_menu.gd" id="1_g0lp4"]
[ext_resource type="Theme" uid="uid://65dakj0ukuj6" path="res://interface/theme/default_theme.tres" id="2_w4yrw"]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource("1_g0lp4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_w4yrw")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.780392)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="ButtonsVBox" type="VBoxContainer" parent="Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ReturnToGameButton" type="Button" parent="Control/MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SettingsGridContainer/MusicSlider")
focus_next = NodePath("../SettingsGridContainer/MusicSlider")
focus_previous = NodePath("../QuitButton")
text = "Continue Game"
alignment = 0

[node name="SettingsGridContainer" type="GridContainer" parent="Control/MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="Control/MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control/MarginContainer/ButtonsVBox/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../ReturnToGameButton")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../../ReturnToGameButton")
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="Control/MarginContainer/ButtonsVBox/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control/MarginContainer/ButtonsVBox/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MainMenuButton" type="Button" parent="Control/MarginContainer/ButtonsVBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
text = "Return to menu"
alignment = 0

[node name="QuitButton" type="Button" parent="Control/MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ReturnToGameButton")
focus_next = NodePath("../ReturnToGameButton")
focus_previous = NodePath("../MainMenuButton")
text = "Quit Game"
alignment = 0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/MarginContainer/ButtonsVBox/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="value_changed" from="Control/MarginContainer/ButtonsVBox/SettingsGridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/ButtonsVBox/SettingsGridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Control/MarginContainer/ButtonsVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
